--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,14 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jquery.min.js",
+              "src/assets/js/popper.min.js",
+              "src/assets/js/bootstrap.min.js",
+              "src/assets/js/sidebar.js",
+              "src/assets/js/workspace.js",
+              "src/assets/js/toggleHub.js"
+            ]
           },
           "configurations": {
             "production": {
