--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/styles.scss",
+              "src/assets/scss/customizingMaterial.scss"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
