--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
+    "@angular/localize": "^10.0.14",
     "@angular/material": "^10.2.3",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "ngx-cookie-service": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
