--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "ng-click-outside": "^7.0.0",
     "ngx-cookie-service": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
