--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             "scripts": [
               "src/assets/js/jquery.min.js",
               "src/assets/js/popper.min.js",
-              "src/assets/js/bootstrap.min.js"
+              "src/assets/js/bootstrap.min.js",
+			  "node_modules/chart.js/dist/Chart.js"
             ]
           },
           "configurations": {
