--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@aspnet/signalr": "^1.1.4",
+    "@microsoft/signalr": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/pdfjs-dist": "^2.1.5",
+    "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "ng-click-outside": "^7.0.0",
     "ngx-cookie-service": "^10.0.1",
