share link data get and set, - left and main body, video img, pdf rendering with ng2 pdf viewer,scroll to particular div, loader

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "ng-click-outside": "^7.0.0",
+    "ng2-pdf-viewer": "^6.3.2",
     "ngx-cookie-service": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "pdfjs-dist": "^2.5.207",
