--- a/angular.json
+++ b/angular.json
@@ -33,13 +33,16 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
               "src/assets/scss/customizingMaterial.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/quill/dist/quill.snow.css",
+              "node_modules/quill/dist/quill.core.css"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
               "src/assets/js/popper.min.js",
               "src/assets/js/bootstrap.min.js",
-			  "node_modules/chart.js/dist/Chart.js"
+			        "node_modules/chart.js/dist/Chart.js",
+			        "node_modules/quill/dist/quill.js"
             ]
           },
           "configurations": {
