--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "ng-click-outside": "^7.0.0",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-cookie-service": "^10.0.1",
+    "ngx-quill": "^12.0.1",
     "ngx-toastr": "^13.0.0",
     "pdfjs-dist": "^2.5.207",
+    "quill": "^1.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -49,6 +51,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.3",
     "@types/node": "^12.11.1",
+    "@types/quill": "^2.0.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
