Dev Prod Build,remove cdk dragdrop, use dragula and imp drag and drop with rearr api in coll-inner, set ht-width of img for drag preview issue,sort cntnt Arr by seq num, add golbal in polyfill

--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@aspnet/signalr": "^1.1.4",
     "@microsoft/signalr": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/dragula": "^2.1.35",
     "@types/pdfjs-dist": "^2.1.5",
     "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "ng-click-outside": "^7.0.0",
+    "ng2-dragula": "^2.1.1",
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-cookie-service": "^10.0.1",
     "ngx-quill": "^12.0.1",
