use dragula for re arrange in cntnt-wrkspc along with dragula css, move item array func moves to array helper,use comm fun in both drag drop modules

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["dragula", "ng2-pdf-viewer"],
             "outputPath": "dist/HiForceAdminUI",
             "index": "src/index.html",
             "main": "src/main.ts",
